--- a/params.yaml
+++ b/params.yaml
@@ -1,13 +1,13 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 5
-type1_Particles : 2
-type2_Particles : 3
+totalParticles  : 50
+type1_Particles : 15
+type2_Particles : 35
 
 seed            : 62384925602983
 weight          : .3
 
-particleRadius_1 : .1
+particleRadius_1 : .15
 particleRadius_2 : .12
 
 numberUpdates  : 300
@@ -18,10 +18,8 @@ WCA          : false
 
 wellDepth : 4
 
-rigidBoundary    : false 
+rigidBoundary    : true 
 periodicBoundary : false  
-externalWell     : true
+externalWell     : false
 
-# convergence_test    : false
-
-boxLength   : 1 
+boxLength   : 1.3
