--- a/params.yaml
+++ b/params.yaml
@@ -1,31 +1,31 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 40
-type1_Particles : 40
+totalParticles  : 50
+type1_Particles : 50
 type2_Particles : 0
 
 seed            : 98638175623423
-weight          : .3
+weight          : .15
 
-particleRadius_1 : .13
+particleRadius_1 : .12
 particleRadius_2 : .12
 
-numberUpdates  : 300
+numberUpdates  : 10000
 
-hardDisks    : true
+hardDisks    : false
 lennardJones : false
-WCA          : false 
+WCA          : true
 
-crosslinkers   : true 
-restLength     : .3676955
-springConstant : 15
-truncationDist : .5
+crosslinkers   : false 
+restLength     : .24
+springConstant : 20
+truncationDist : .28
 
-wellDepth : 4
+wellDepth : 1
 
 rigidBoundary    : false 
-periodicBoundary : false  
-externalWell     : true
+periodicBoundary : true 
+externalWell     : false
 
-boxLength   : 1.1
+boxLength   : 1.2
 
