--- a/params.yaml
+++ b/params.yaml
@@ -1,16 +1,16 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 63
-type1_Particles : 63
+totalParticles  : 115
+type1_Particles : 115
 type2_Particles : 0
 
-particleRadius_1 : .1
+particleRadius_1 : .05
 particleRadius_2 : .12
 
 seed            : 98638175623423
 weight          : .2
 
-numberUpdates  : 35000
+numberUpdates  : 100000
 
 hardDisks    : false
 lennardJones : true
@@ -22,8 +22,8 @@ springConstant : 10
 truncationDist : .4
 beta           : .8
 
-wellDepth : 2         # corresponds unit of energy
-sigma : .2
+wellDepth : 1.42857         # corresponds to unit of energy in LJ
+sigma : .1673320
 
 rigidBoundary    : false 
 periodicBoundary : true 
