--- a/params.yaml
+++ b/params.yaml
@@ -1,16 +1,18 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 115
-type1_Particles : 115
+totalParticles  : 500 
+type1_Particles : 500
 type2_Particles : 0
 
-particleRadius_1 : .05
+particleRadius_1 : .06
 particleRadius_2 : .12
 
 seed            : 98638175623423
-weight          : .2
+weight          : .08
 
-numberUpdates  : 100000
+numberUpdates  : 200000
+
+initializationType : 1 # 0 = random, 1 = hexagonal
 
 hardDisks    : false
 lennardJones : true
@@ -20,14 +22,15 @@ crosslinkers   : false
 restLength     : .22449
 springConstant : 10
 truncationDist : .4
-beta           : .8
+beta           : 1
 
-wellDepth : 1.42857         # corresponds to unit of energy in LJ
-sigma : .1673320
+wellDepth : 1         # corresponds unit of energy
+sigma : .1788854382   # RD = 1
 
 rigidBoundary    : false 
 periodicBoundary : true 
 externalWell     : false
 
-boxLength   : 1
+boxLength   : 2
 
+animationFile : positions.txt
