--- a/params.yaml
+++ b/params.yaml
@@ -4,16 +4,16 @@ totalParticles  : 500
 type1_Particles : 500
 type2_Particles : 0
 
-particleRadius_1 : .06
+particleRadius_1 : .03
 particleRadius_2 : .12
 
 seed            : 98638175623423
-weight          : .08
+weight          : .06
 
-numberUpdates  : 200000
+numberUpdates  : 2000
 
 initializationType : 1 # 0 = random, 1 = hexagonal
-
+                       # 2 = square
 hardDisks    : false
 lennardJones : true
 WCA          : false
@@ -22,15 +22,15 @@ crosslinkers   : false
 restLength     : .22449
 springConstant : 10
 truncationDist : .4
-beta           : 1
+beta           : .5
 
 wellDepth : 1         # corresponds unit of energy
-sigma : .1788854382   # RD = 1
+sigma : .1            # RD = 1
 
 rigidBoundary    : false 
 periodicBoundary : true 
 externalWell     : false
 
-boxLength   : 2
+boxLength   : 1.33630621
 
 animationFile : positions.txt
