--- a/params.yaml
+++ b/params.yaml
@@ -1,36 +1,38 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 500 
-type1_Particles : 500
+totalParticles  : 256 
+type1_Particles : 256
 type2_Particles : 0
 
 particleRadius_1 : .05
 particleRadius_2 : .12
 
-seed            : 98638175623423
-weight          : .06
+## DEFINE THE REDUCED PARAMS ###
 
-numberUpdates  : 4500
+reducedTemp : .7  # not measured by the system currently
+reducedDens : .9  # currently user determined, but could be found from sigma,L
+sigma       : 1    # if = 0, then sigma = Lsqrt(p^*/NumPart)
+boxLength   : 0    # if = 0, then L = sigma sqrt(N/p^*)
 
-initializationType : 2 # 0 = random, 1 = hexagonal
-                       # 2 = square
+seed   : 20394750231 
+weight : .06 # weight is being calculated inside the program
+
+numberUpdates  : 1500  # each update = 1 sweep = n_part attempted moves 
+initializationType : 1 # 0 = random, 1 = hexagonal, 2 = square
+
+### CHOOSE INTERACTION TYPE ####
+
 hardDisks    : false
 lennardJones : true
 WCA          : false
 
-crosslinkers   : false
-restLength     : .22449
-springConstant : 10
-truncationDist : .4
-beta           : .5
+# wellDepth : 1    this unit of energy shouldn't be necessary if 
+                 # everything is nondimensionalized properly
 
-wellDepth : 1         # corresponds unit of energy
-sigma : .1            # RD = 1
+### DEFINE TYPE OF BOUNDARY ######
 
 rigidBoundary    : false 
-periodicBoundary : true 
-externalWell     : false
-
-boxLength   : 1.443375673
+periodicBoundary : true # primarily working with periodic boundaries for now
+externalWell     : false # so the other BC will need a fair amount of work 
 
 animationFile : positions.txt
