--- a/params.yaml
+++ b/params.yaml
@@ -8,15 +8,15 @@ particleRadius: .05
 
 # DEFINE THE REDUCED PARAMS ###
 
-reducedTemp : .6  # not measured by the system currently
-reducedDens : .4  # currently user determined, but could be found from sigma,L
+reducedTemp : 1.05  # not measured by the system currently
+reducedDens : .56  # currently user determined, but could be found from sigma,L
 sigma       : 1    # if = 0, then sigma = Lsqrt(p^*/NumPart)
 boxLength   : 0    # if = 0, then L = sigma sqrt(N/p^*)
 
-LJ_constant_1 : 1  # thus the well depth for each is equal to 
-LJ_constant_2 : 5 # c * KbT
+LJ_constant_1 : 10  # thus the well depth for each is equal to 
+LJ_constant_2 : 1 # c * KbT
 
-seed   : 79845203982 
+seed   : 59137498751 
 weight : .06 # weight is being calculated inside the program
 
 numberUpdates  : 16000  # each update = 1 sweep = n_part attempted moves 
@@ -24,17 +24,17 @@ initializationType : 1 # 0 = random, 1 = hexagonal, 2 = square
 
 ### CHOOSE RUN LENGTH ####
 
-equilibriate_sweep : 8000 
+equilibriate_sweep : 8000  
 data_collect_interval : 20
 
 ### CHOOSE INTERACTION TYPE ####
 
 interactionType : 3 # 0 = hard disk, 1 = LJ, 2 = WCA
                     # 3 = WCA + spring energy
-springConstant : 1
+springConstant : 5
 
 ### DEFINE TYPE OF BOUNDARY ######
 
-boundaryType : 0 # 0 = rigid, 1 = periodic, 2 = external well 
+boundaryType : 1 # 0 = rigid, 1 = periodic, 2 = external well 
 
 animationFile : positions.txt
