--- a/params.yaml
+++ b/params.yaml
@@ -1,22 +1,22 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 100 
-type1_Particles : 50
-type2_Particles : 50
+totalParticles  : 120
+type1_Particles : 60
+type2_Particles : 60
 
 particleRadius: .05
 
 # DEFINE THE REDUCED PARAMS ###
 
 reducedTemp : 1.5  # not measured by the system currently
-reducedDens : .6  # currently user determined, but could be found from sigma,L
+reducedDens : .71  # currently user determined, but could be found from sigma,L
 sigma       : 1    # if = 0, then sigma = Lsqrt(p^*/NumPart)
 boxLength   : 0    # if = 0, then L = sigma sqrt(N/p^*)
 
-LJ_constant_1 : 3  # thus the well depth for each is equal to 
-LJ_constant_2 : 27 # c * KbT
+reference_affinity : 2
+affinity_multiple  : 8
 
-seed   : 4234509346304896
+seed   : 234970312398427523
 weight : .06 # weight is being calculated inside the program
 
 numberUpdates  : 20000  # each update = 1 sweep = n_part attempted moves 
@@ -31,10 +31,11 @@ data_collect_interval : 50
 
 interactionType : 3 # 0 = hard disk, 1 = LJ, 2 = WCA
                     # 3 = WCA + spring energy
-springConstant : 5.5
+springConstant : 4.0
+rest_length : 2.6 # 65nm/25nm = c-c dist / diam 
 
 ### DEFINE TYPE OF BOUNDARY ######
 
-boundaryType : 1 # 0 = rigid, 1 = periodic, 2 = external well 
+boundaryType : 2 # 0 = rigid, 1 = periodic, 2 = external well 
 
 animationFile : positions.txt
