--- a/params.yaml
+++ b/params.yaml
@@ -1,41 +1,39 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 120
-type1_Particles : 60
-type2_Particles : 60
+totalParticles  : 30
+type1_Particles : 15
+type2_Particles : 15
 
 particleRadius: .05
 
-# DEFINE THE REDUCED PARAMS ###
-
+# reduced parameters of the system 
 reducedTemp : 1.5  # not measured by the system currently
-reducedDens : .71  # currently user determined, but could be found from sigma,L
+reducedDens : .7  # currently user determined, but could be found from sigma,L
 sigma       : 1    # if = 0, then sigma = Lsqrt(p^*/NumPart)
 boxLength   : 0    # if = 0, then L = sigma sqrt(N/p^*)
 
-reference_affinity : 2
+# strength of different interactions
+reference_affinity : 1.65
 affinity_multiple  : 8
 
-seed   : 234970312398427523
+seed   : 823058205295032951
 weight : .06 # weight is being calculated inside the program
 
-numberUpdates  : 20000  # each update = 1 sweep = n_part attempted moves 
+# initialization, interaction, and boundary type
 initializationType : 1 # 0 = random, 1 = hexagonal, 2 = square
+interactionType    : 3 # 0 = hard disk, 1 = LJ, 2 = WCA, 3 = WCA + spring energy
+boundaryType       : 2 # 0 = rigid, 1 = periodic, 2 = external well 
 
-### CHOOSE RUN LENGTH ####
-
-equilibriate_sweep : 10000  
+# run length parameters
+numberUpdates         : 26000  # each update = 1 sweep = n_part attempted moves 
+equilibriate_sweep    : 13000  
 data_collect_interval : 50
 
-### CHOOSE INTERACTION TYPE ####
-
-interactionType : 3 # 0 = hard disk, 1 = LJ, 2 = WCA
-                    # 3 = WCA + spring energy
+# parameters for using the spring potential
 springConstant : 4.0
-rest_length : 2.6 # 65nm/25nm = c-c dist / diam 
+rest_length    : 2.6 # 65nm/25nm = c-c dist / diam 
 
-### DEFINE TYPE OF BOUNDARY ######
-
-boundaryType : 2 # 0 = rigid, 1 = periodic, 2 = external well 
+# parameters for using the external well boundary
+external_well_depth : 1 # c * (x^2 + y^2)
 
 animationFile : positions.txt
