first Catch2 test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,21 @@ find_package(yaml-cpp REQUIRED)
 include_directories(${YAML_CPP_INCLUDE_DIR})
 	
 target_link_libraries(sim ${YAML_CPP_LIBRARIES})
+
+# if everything breaks with the testing, just comment everything below
+# add packages in for catch2 unit testing
+find_package(Catch2 REQUIRED)
+include_directories(${CATCH2_INCLUDE_DIR})
+
+add_executable(test_sim 
+	catch_testing/main_config.cpp 
+	catch_testing/properties_test.hpp
+	src/Particle.cpp
+	src/Properties.cpp
+	src/Parameters.cpp)
+
+target_link_libraries(test_sim Catch2::Catch2 ${YAML_CPP_LIBRARIES})
+
+include(CTest)
+include(Catch)
+catch_discover_tests(test_sim)
