--- a/params.yaml
+++ b/params.yaml
@@ -1,36 +1,36 @@
 ### total = type1 + type2 ######
 
-totalParticles  : 40
-type1_Particles : 40
-type2_Particles : 0 
+totalParticles  : 30 
+type1_Particles : 15
+type2_Particles : 15 
 
-particleRadius: .2 # to go back to previous test, use .05 as radius
+particleRadius: .05 # to go back to previous test, use .05 as radius
 
 # reduced parameters of the system 
-reducedTemp : 1.2  # not measured by the system currently
-reducedDens : .7  # currently user determined, but could be found from sigma,L
+reducedTemp : 0.7  # not measured by the system currently
+reducedDens : 0.7  # currently user determined, but could be found from sigma,L
 sigma       : 1    # if = 0, then sigma = Lsqrt(p^*/NumPart)
 boxLength   : 0    # if = 0, then L = sigma sqrt(N/p^*)
 
 # strength of different interactions
 reference_affinity : 1
-affinity_multiple  : 8
+affinity_multiple  : 5
 
-seed   : 8923052835283572
+seed   : 20982385239851294
 weight : .06 # weight is being calculated inside the program
 
 # initialization, interaction, and boundary type
 initializationType : 1 # 0 = random, 1 = hexagonal, 2 = square
 interactionType    : 1 # 0 = hard disk, 1 = LJ, 2 = WCA, 3 = WCA + spring energy
-boundaryType       : 2 # 0 = rigid, 1 = periodic, 2 = external well 
+boundaryType       : 1 # 0 = rigid, 1 = periodic, 2 = external well 
 
 # run length parameters
-numberUpdates         : 20000  # each update = 1 sweep = n_part attempted moves 
-equilibriate_sweep    : 10000  
+numberUpdates         : 12000  # each update = 1 sweep = n_part attempted moves 
+equilibriate_sweep    : 6000  
 data_collect_interval : 50
 
 # parameters for using the spring potential
-springConstant : 4.0
+springConstant : 5.5
 rest_length    : 2.6 # 65nm/25nm = c-c dist / diam 
 
 # parameters for using the external well boundary
