--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ add_executable(tsim
 	src/Particle.cpp
 	src/Properties.cpp
 	src/Parameters.cpp
-	src/Particle_Manager.cpp)
+	src/Particle_Manager.cpp
+	src/System_Manager.cpp)
 
 target_link_libraries(tsim Catch2::Catch2 ${YAML_CPP_LIBRARIES})
 
